[gd_scene load_steps=12 format=2]

[ext_resource path="res://Resources/Art/Slime/slime_idle.png" type="Texture" id=1]
[ext_resource path="res://Resources/Scenes/Slime/SlimeMaterial.tres" type="Material" id=2]
[ext_resource path="res://Resources/UI/Scenarios/TheBasics.gd" type="Script" id=3]
[ext_resource path="res://Resources/UI/ThemeMAIN.tres" type="Theme" id=4]

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "default",
"speed": 7.02
} ]

[node name="GenotypeFenotype" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 304, -96 )
theme = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Theory" type="Panel" parent="."]
margin_right = 624.0
margin_bottom = 424.0
rect_pivot_offset = Vector2( -456, -16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Theory"]
margin_left = 8.0
margin_top = 8.0
margin_right = 118.0
margin_bottom = 28.0
rect_scale = Vector2( 1.2, 1.2 )
text = "The Basics"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Theory"]
margin_left = 16.0
margin_top = 40.0
margin_right = 400.0
margin_bottom = 106.0
text = "When inspecting your slimes, you can notice, that they have different sizes and colours."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Theory"]
margin_left = 16.0
margin_top = 128.0
margin_right = 608.0
margin_bottom = 194.0
text = "Those characteristics can be defined as a property of an organism according to which individuals can be divided into classes."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Theory"]
margin_left = 16.0
margin_top = 216.0
margin_right = 608.0
margin_bottom = 328.0
text = "We can distinguish two types of traits. Quantitive characteristics describe height or weight. Quality characteristics describe colour of the body or type of the design.
"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthySlime" type="AnimatedSprite" parent="Theory"]
material = ExtResource( 2 )
position = Vector2( 432, 64 )
scale = Vector2( 4.5, 4.5 )
frames = SubResource( 28 )
playing = true

[node name="HealthySlime2" type="AnimatedSprite" parent="Theory"]
material = ExtResource( 2 )
position = Vector2( 544, 56 )
scale = Vector2( 6, 6 )
frames = SubResource( 28 )
frame = 5
playing = true

[node name="ExcersiseButton" type="Button" parent="Theory"]
margin_left = 200.0
margin_top = 352.0
margin_right = 364.0
margin_bottom = 382.0
text = "Let's Excersise!"

[node name="ReturnButton" type="Button" parent="Theory"]
margin_left = 16.0
margin_top = 384.0
margin_right = 92.0
margin_bottom = 414.0
text = "Scenarios"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Excercise" type="Panel" parent="."]
visible = false
margin_right = 624.0
margin_bottom = 424.0
rect_pivot_offset = Vector2( -456, -16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Excercise"]
margin_left = 8.0
margin_top = 8.0
margin_right = 118.0
margin_bottom = 28.0
rect_scale = Vector2( 1.2, 1.2 )
text = "The Basics - The Excersise"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Excercise"]
margin_left = 16.0
margin_top = 40.0
margin_right = 608.0
margin_bottom = 106.0
text = "Here you can see a list of characteristics. Decide which ones are qualitative and which are quantitative."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Excercise"]
margin_left = 48.0
margin_top = 104.0
margin_right = 136.0
margin_bottom = 128.0
text = "Weight"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeightB" type="OptionButton" parent="Excercise/Label3"]
margin_left = 280.0
margin_top = -8.0
margin_right = 440.0
margin_bottom = 22.0
theme = ExtResource( 4 )
text = "Quantitive"
items = [ "Quantitive", null, false, 0, null, "Quality", null, false, 1, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="Excercise"]
margin_left = 48.0
margin_top = 144.0
margin_right = 168.0
margin_bottom = 168.0
text = "Eye colour"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EyeCB" type="OptionButton" parent="Excercise/Label6"]
margin_left = 280.0
margin_top = -8.0
margin_right = 440.0
margin_bottom = 22.0
text = "Quantitive"
items = [ "Quantitive", null, false, 0, null, "Quality", null, false, 1, null ]
selected = 0

[node name="Label7" type="Label" parent="Excercise"]
margin_left = 48.0
margin_top = 184.0
margin_right = 168.0
margin_bottom = 208.0
text = "Height"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeightB" type="OptionButton" parent="Excercise/Label7"]
margin_left = 280.0
margin_top = -8.0
margin_right = 440.0
margin_bottom = 22.0
text = "Quantitive"
items = [ "Quantitive", null, false, 0, null, "Quality", null, false, 1, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="Excercise"]
margin_left = 48.0
margin_top = 224.0
margin_right = 168.0
margin_bottom = 248.0
text = "Nose shape"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoseShapeB" type="OptionButton" parent="Excercise/Label8"]
margin_left = 280.0
margin_top = -8.0
margin_right = 440.0
margin_bottom = 22.0
text = "Quantitive"
items = [ "Quantitive", null, false, 0, null, "Quality", null, false, 1, null ]
selected = 0

[node name="Label9" type="Label" parent="Excercise"]
margin_left = 48.0
margin_top = 264.0
margin_right = 312.0
margin_bottom = 307.0
text = "Susceptibility to disease"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SusceptibilityB" type="OptionButton" parent="Excercise/Label9"]
margin_left = 280.0
margin_top = -8.0
margin_right = 440.0
margin_bottom = 22.0
text = "Quantitive"
items = [ "Quantitive", null, false, 0, null, "Quality", null, false, 1, null ]
selected = 0

[node name="CheckAnswerB" type="Button" parent="Excercise"]
margin_left = 200.0
margin_top = 352.0
margin_right = 364.0
margin_bottom = 382.0
text = "Check Answer"

[node name="ReturnButton" type="Button" parent="Excercise"]
margin_left = 16.0
margin_top = 384.0
margin_right = 92.0
margin_bottom = 414.0
text = "Scenarios"

[node name="TheoryButton" type="Button" parent="Excercise"]
margin_left = 512.0
margin_top = 384.0
margin_right = 612.0
margin_bottom = 414.0
text = "Return"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Theory/ExcersiseButton" to="." method="_on_ExcersiseButton_pressed"]
[connection signal="pressed" from="Theory/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="Excercise/CheckAnswerB" to="." method="_on_CheckAnswerB_pressed"]
[connection signal="pressed" from="Excercise/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="Excercise/TheoryButton" to="." method="_on_TheoryButton_pressed"]
